2002-08-13  Rodrigo Moya <rodrigo@ximian.com>

	* System.Data.SqlClient/SqlDataAdapter.cs (DeleteCommand,
	InsertCommand, SelectCommand, UpdateCommand): removed 'new' keyword
	to avoid compiler warnings.

2002-08-12  Franklin Wise <gracenote@earthlink.net>

	* System.Data/Constraint.cs: Implemented

	* System.Data/UniqueConstraint.cs: GetHashCode() &
	special case Ctor. Still need to be implemented. LAMESPEC tags
	added.

	* System.Data/ConstraintCollection.cs: Clear() &
	AddRange() need to be finished. Several LAMESPEC tags.

	* Allow Constraint collection to be created in DataTable.

	* System.Data/ForeignKeyConstraint: Added a couple of
	helper functions.

	* System.Data/DataColumnCollection New/Added DataColumns now have
	Table property set.

2002-08-11  Rodrigo Moya <rodrigo@ximian.com>

	* System.Data.OleDb/libgda.cs: added some GdaValue functions.

	* System.Data.OleDb/OleDbCommand.cs (OpenReader): removed this
	internal method, since we don't need it.
	(ExecuteReader): call SetupGdaCommand before executing the command
	via libgda functions.
	(ExecuteScalar): implemented.

	* System.Data.OleDb/OleDbDateReader.cs (OleDbDataReader): removed call
	to OleDbCommand.OpenReader.
	(GetBoolean): implemented.

2002-08-08  Franklin Wise <gracenote@earthlink.net>

	* System.Data/IDbComand.cs: IDbCommand now inherits IDisposable

	* System.Data/IDbConnection.cs: IDbConnection now inherits IDisposable

	* System.Data.SqlTypes/SqlCompareOptions.cs: Enum now set to correct
	values.

2002-08-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* System.Data.OleDb/OleDbConnection.cs: little fixes to make it work
	and don't show a warning in Open.

	* System.Data.OleDb/TestOleDb.cs: added Close.

2002-08-05  Rodrigo Moya <rodrigo@ximian.com>

	* System.Data.OleDb/OleDbConnection.cs (ConnectionString,
	ConnectionTimeout, ServerVersion, GdaConnection):
	corrected style.
	(OleDbConnection): call libgda.gda_init on constructor.
