@@ -1,3 +1,7 @@
+2002-08-13  Franklin Wise <gracenote@earthlink.net>
+
+	* System.Data/DataRow.cs: Added several fixme tags.
+	
 2002-08-13  Rodrigo Moya <rodrigo@ximian.com>
 
 	* System.Data.SqlClient/SqlDataAdapter.cs (DeleteCommand,
